src/pages/Home/Home.scss
@import "../../scss/breakpoints";

.Home {
  display: grid;
  padding: 20px;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-gap: 15px;
  align-content: start;
  margin-top: 50px;

  @include xl {
    height: calc(100vh - 130px) !important;
  }
}

